2006-11-03  Nurdin Premji  <npremji@edhat.com>

	* ProcBlockObserver.java: Split the observer into a main Proc observer and a private
	Task Observer which gets added to each task individually. Allows for better separation
	of addfails between tasks and procs.
	(ProcBlockTaskObserver): Added.
	(requestDeleteInstructionObserver): Added. 
	(requestAddObservers): Changed to add the task Observer rather than the proc Observer to each task.
	(requestDeleteTerminatingObserver): Added.
	(requestUnblock): Changed to unblock task obsever rather than proc observer.
	(blockTask): Ditto.
	* TaskState.java (.handleAddObservation): Fixed typo, "destroyed" instead of "detached".
	
	* TestProcStopped.java (testRunningAttached): Changed to use a ProcBlockObserver.
	(MyTester.MyTester): Ditto.
	(testMultiThreadedStoppedAttached): Ditto.
	(testMultiThreadedRunningAttached): Ditto.
	(running): Ditto.
	(stopped): Ditto.
	(testStoppedAttached): Ditto.
	(MyTester): Ditto.
	(MyTester.deletedFrom): Ditto.
	
2006-11-02  Mike Cvet  <mcvet@redhat.com>

	* ProcBlockObserver.java (ProcBlockObserver): Changed 
	TaskObserver.Terminated to TaskObserver.Terminating.
	(updateTerminated): Removed.
	(updateTerminating): Added.

2006-11-01  Nurdin Premji  <npremji@redhat.com>

	* Host.java (getProc): Added ProcID logging info.
	
	* ProcBlockObserver.java: Implemented TaskObserver.Terminated and ProcObserver.ProcTasks
	for tasks that get removed. 
	(requestAddObservers): Added TaskObserver.Terminated.
	(taskAdded): Added.
	(addFailed): Moved eventLoop join out of the eventLoop event. Changed event to common
	requestStopEvent.
	(taskRemoved): Added.
	(updateTerminated): Added.
	* TestLib.java (AckDaemonCloneProcess.AckDaemonCloneProcess): Added.
	(AckDaemonCloneProcess): Added.
	(funitThreadsCommand): Added.	

2006-11-01  Mike Cvet  <mcvet@redhat.com>

	* ProcBlockObserver.java (ProcBlockObserver): Removed unnecessary boolean flag. 
	(existingTask): Removed.

2006-10-31  Mike Cvet  <mcvet@redhat.com>
